--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-dragdroplist",
+  "name": "svelte-dragdroplist-clickable",
   "main": "DragDropList.svelte",
   "svelte": "DragDropList.svelte",
   "version": "1.1.1",
@@ -12,14 +12,14 @@
   "license": "ISC",
   "respository": {
     "type": "git",
-    "url": "git+https://github.com/jwlarocque/svelte-dragdroplist.git"
+    "url": "git+https://github.com/rohitmeshramD/svelte-dragdroplist.git"
   },
   "bugs": {
-    "url": "https://github.com/jwlarocque/svelte-dragdroplist/issues"
+    "url": "https://github.com/rohitmeshramD/svelte-dragdroplist/issues"
   },
   "description": "Sortable lists with Svelte 3.  Animated, touch-friendly, and accessible.",
-  "author": "John LaRocque <john@jwlarocque.com>",
-  "homepage": "https://github.com/jwlarocque/svelte-dragdroplist",
+  "author": "Rohit Meshram <rohitmeshramd@gmail.com>",
+  "homepage": "https://github.com/rohitmeshramD/svelte-dragdroplist",
   "keywords": [
     "svelte",
     "drag",
@@ -27,6 +27,8 @@
     "list",
     "sortable",
     "component",
-    "dnd"
+    "dnd",
+    "clickable",
+    "double click"
   ]
 }
